# dns-server

./: .gitignore  dns_server.opam  dune-project
lib/: buffer.ml  buffer_test.ml  dune  errors.ml  packet.ml  packet_test.ml  server.ml
test/: bad_packet.txt  dune  query_packet.txt  response_packet.txt
